--- a/dao/src/main/resources/cn/itcast/core/dao/template/TypeTemplateDao.xml
+++ b/dao/src/main/resources/cn/itcast/core/dao/template/TypeTemplateDao.xml
@@ -230,4 +230,10 @@
       status = #{status,jdbcType=VARCHAR}
     where id = #{id,jdbcType=BIGINT}
   </update>
+
+
+
+  <select id="selectOptionList"  resultType="java.util.Map" >
+    select id,name as text from tb_type_template
+  </select>
 </mapper>
